--- a/Homework/Chatbot/requirements.txt
+++ b/Homework/Chatbot/requirements.txt
@@ -6,24 +6,25 @@
 # Instalación:
 #   pip install -r requirements.txt
 # ============================================================================
+--upgrade pip
 
 # FRAMEWORK PRINCIPAL
-langchain==1.2.9
-langchain-community==0.4.1
-langchain-text-splitters==1.1.0
-langchain-huggingface==1.2.0
+langchain
+langchain-community
+langchain-text-splitters
+langchain-huggingface
 
 # MODELOS DE IA
-transformers==5.1.0
-torch==2.10.0
-sentence-transformers==5.2.2
-huggingface_hub==1.4.1
+huggingface_hub
+torch
+sentence-transformers
+transformers
 
 # BASE DE DATOS VECTORIAL
-faiss-cpu==1.13.2
+faiss-cpu
 
 # LECTURA DE PDFs
-pypdf==6.6.2
+pypdf
 
 # Dependencias adicionales (instaladas automáticamente)
 # numpy
